Improve Flutter UI performance by optimizing widget rendering

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <application
         android:enableOnBackInvokedCallback="true"
         android:usesCleartextTraffic="true"
-        android:label="tourify"
+        android:label="Tourify"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
